--- a/wp-content/themes/heideandcook/web/stylesheets/app.css
+++ b/wp-content/themes/heideandcook/web/stylesheets/app.css
@@ -6264,6 +6264,30 @@ table.hover tr:nth-of-type(even):hover {
 .green {
   color: #006940; }
 
+.row.posts-content {
+  margin-top: 4rem; }
+
+a.button.hollow {
+  border: 3px solid #006940;
+  color: #006940;
+  font-weight: bold;
+  text-transform: uppercase; }
+
+.posts-left .more-posts {
+  text-align: center; }
+  .posts-left .more-posts #load-more {
+    display: inline-block;
+    margin: 6rem auto 5rem auto; }
+
+.posts-right a.button.hollow:hover {
+  color: #fff;
+  background: #db8835;
+  border: 3px solid #db8835;
+  transition: background-color 0.1s ease-out, color 0.25s ease-out; }
+
+.posts-right h3 {
+  margin-bottom: .25rem; }
+
 .alignright {
   float: right;
   padding: 0 0 1rem 1rem; }
@@ -6371,13 +6395,30 @@ table.hover tr:nth-of-type(even):hover {
     font-size: .75rem;
     margin-top: 1rem; }
 
+.home .hero-header {
+  border-bottom: 0.625rem solid #db8835; }
+
+.home .hero-header:after {
+  left: 50%;
+  bottom: 0px;
+  border: solid transparent;
+  content: " ";
+  height: 0;
+  width: 0;
+  position: absolute;
+  pointer-events: none;
+  border-color: rgba(136, 183, 213, 0);
+  border-top-color: #db8835;
+  border-width: 2.8125rem 2.5rem;
+  margin-left: -2.5rem;
+  margin-bottom: -5.5625rem; }
+
 .hero-header {
   background-image: url("../images/pipes.png");
   background-repeat: no-repeat;
   background-size: cover;
   padding: 5.625rem 0;
   text-align: center;
-  border-bottom: 0.625rem solid #db8835;
   position: relative; }
   .hero-header h1 {
     color: #fff;
@@ -6404,16 +6445,29 @@ table.hover tr:nth-of-type(even):hover {
     margin: 0 0.125rem;
     background-position: center;
     background-repeat: no-repeat;
-    padding: 0.375rem;
-    background-image: url("../images/next-post-arrow.png"); }
-    .hero-header .prev:hover, .hero-header .next:hover {
-      background-image: url("../images/next-post-arrow-hover.png"); }
+    padding: 0.9375rem; }
   .hero-header .prev {
     -webkit-transform: scaleX(-1);
         -ms-transform: scaleX(-1);
             transform: scaleX(-1);
     -webkit-filter: FlipH;
             filter: FlipH; }
+  .hero-header .prev-next {
+    vertical-align: middle; }
+    .hero-header .prev-next a {
+      height: 46px;
+      width: 46px;
+      font-size: 2rem;
+      line-height: 2rem;
+      padding: 0px .8rem;
+      border: 2px solid #f3f4f4;
+      border-radius: 3px;
+      color: #f3f4f4;
+      margin: 0px .2rem; }
+    .hero-header .prev-next a:hover {
+      color: #62a745;
+      border-color: #62a745;
+      transition: .25s; }
   .hero-header .lightbox h3 {
     margin-bottom: 1.5rem; }
   .hero-header .lightbox a {
@@ -6424,21 +6478,6 @@ table.hover tr:nth-of-type(even):hover {
     background-image: url("../images/play.png"); }
     .hero-header .lightbox a:hover, .hero-header .lightbox a:active, .hero-header .lightbox a.active {
       background-image: url("../images/play-hover.png"); }
-
-.hero-header:after {
-  left: 50%;
-  bottom: 0px;
-  border: solid transparent;
-  content: " ";
-  height: 0;
-  width: 0;
-  position: absolute;
-  pointer-events: none;
-  border-color: rgba(136, 183, 213, 0);
-  border-top-color: #db8835;
-  border-width: 2.8125rem 2.5rem;
-  margin-left: -2.5rem;
-  margin-bottom: -5.5625rem; }
 
 .hero-author {
   position: relative;
